# fs-kitty

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DEVELOP.md  Justfile  README.md
.github/workflows/: ci.yml
.handoffs/: 2024-12-24-fskit-extension-implementation.md  2024-12-24-swift-rapace-integration.md
crates/fs-kitty-client/: Cargo.toml
crates/fs-kitty-client/src/: main.rs
crates/fs-kitty-codegen/: Cargo.toml
crates/fs-kitty-codegen/src/: main.rs
crates/fs-kitty-proto/: Cargo.toml  README.md
crates/fs-kitty-proto/src/: lib.rs
crates/fs-kitty-server/: Cargo.toml
crates/fs-kitty-server/src/: main.rs
crates/fs-kitty-swift/: Cargo.toml  build.rs
crates/fs-kitty-swift/src/: lib.rs
crates/fskitty-swift/: Cargo.toml
crates/fskitty-swift/src/: lib.rs
crates/spike-vfs-client/: Cargo.toml
crates/spike-vfs-client/src/: main.rs
crates/spike-vfs-server/: Cargo.toml
crates/spike-vfs-server/src/: main.rs
docs/: IMPLEMENTING.md  LIFECYCLE.md  TROUBLESHOOTING.md
swift/FsKitty/: Package.resolved  Package.swift
swift/FsKitty/Sources/BridgeHeaders/: BridgeHeaders.h  module.modulemap
swift/FsKitty/Sources/FsKitty/: SwiftBridgeCore.swift  VfsClient.swift  fs-kitty-swift.swift  main.swift
swift/Spike1/: Package.swift
swift/Spike1/Sources/BridgeHeaders/: BridgeHeaders.h
swift/Spike1/Sources/Spike1/: FskittySwift.swift  main.swift
xcode/: project.yml
xcode/FsKitty/: FsKittyApp.swift  Info.plist
xcode/FsKittyExt/: Bridge.swift  FsKittyExt.swift  Info.plist  Item.swift  VfsClient.swift  Volume.swift  fs-kitty-swift.swift
xcode/FsKittyExt/BridgeHeaders/: BridgeHeaders.h
xcode/FsKittyMount/: main.swift
