[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/fs-kitty"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Roam (git)
roam = { git = "https://github.com/bearcove/roam", branch = "main" }
roam-stream = { git = "https://github.com/bearcove/roam", branch = "main" }

# Serialization
facet = { git = "https://github.com/facet-rs/facet", branch = "main", features = ["camino"] }
facet-core = { git = "https://github.com/facet-rs/facet", branch = "main" }
