[package]
name = "fs-kitty-client"
version.workspace = true
edition.workspace = true

[[bin]]
name = "fs-kitty-client"
path = "src/main.rs"

[dependencies]
fs-kitty-proto = { path = "../fs-kitty-proto" }
tokio.workspace = true
roam-stream.workspace = true
facet.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
