[package]
name = "fs-kitty-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "fs-kitty-server"
path = "src/main.rs"

[dependencies]
fs-kitty-proto = { path = "../fs-kitty-proto" }
tokio.workspace = true
rapace = { workspace = true, features = ["stream"] }
facet.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
