[package]
name = "fs-kitty-swift"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["staticlib"]

[dependencies]
fs-kitty-proto = { path = "../fs-kitty-proto" }
swift-bridge.workspace = true
tokio.workspace = true
rapace = { workspace = true, features = ["stream"] }
once_cell = "1"

[build-dependencies]
swift-bridge-build.workspace = true
