[package]
name = "spike-vfs-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "spike-vfs-server"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
rapace = { workspace = true, features = ["stream"] }
facet.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
